# iWW-GVR

./: .coveragerc  .flake8  .gitattributes  .gitignore  DEMO.ipynb  LICENSE  LICENSE.txt  MANIFEST.in  README.md  create-jk.bat  pyproject.toml  pytest.ini  requirements-dev.txt  reset-conda-env.bat  setup.cfg  setup.py  unistall.sh
adhoc/: demo_gvr_soft_cyl.py  generate_test_data_mcnp.py
dev/: install_deps  poetry  run_coverage  upstream
doc/: VersionModification_FollowUP.txt
iww_gvr/: __init__.py  __main__.py  __version__.py  conftest.py  main.py  menu.py  meshtal_module.py  plotter.py  weight_window.py  ww_parser.py
iww_gvr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
iww_gvr/utils/: resource.py
tests/: conftest.py  test_main.py  test_weight_window.py  test_ww_parser.py  ww_complex_cart  ww_simple_cart  ww_simple_cyl
tests/data/: ww_complex_cart  ww_simple_cart  ww_simple_cyl
tests/utils/: test_resource.py
