[tool.poetry]
name = "iww_gvr"
version = "1.1.8"  # TODO dvp: add loading of version from iww_gvr/__version__.py
authors = ["Marco Fabbri", "Alvaro Cubi"]
# author_email="marco.fabbri@f4e.europa.eu"
description="Weight window Manipulator & Global Variance Reduction Tool"
# url="git@github.com:Radiation-Transport/iWW-GVR.git"

[tool.poetry.scripts]
iww_gvr = "iww_gvr.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"  # TODO dvp: scipy-1.7.1 doesn't support python 3.10, check this on scipy update
pyevtk = "^1.4.1"
matplotlib = "^3.4.3"
vtk = "^9.0.3"
scipy = "^1.7.1"
tqdm = "^4.62.3"
Pillow = "^10.0.1"
PyQt5 = "^5.15.4"
pyvista = "^0.32.1"

[tool.poetry.dev-dependencies]
#Pygments = "^2.7.2"
#Sphinx = "^4.2.0"
black = {version = "*", allow-prereleases = true}
coverage = {version = "^6.0", extras = ["toml"]}
#codecov = "^2.1.10"
#darglint = "^1.5.5"
#flake8 = "^3.8.4"
#flake8-annotations = "^2.4.1"
#flake8-bandit = "^2.1.2"
#flake8-black = "^0.2.1"
#flake8-bugbear = "^21.9.1"
#flake8-docstrings = "^1.5.0"
#flake8-import-order = "^0.18.1"
#mypy = "^0.910"
#nox = "^2021.6.12"
pre-commit = "^2.8.2"
pytest = "^6.2"
#pytest-benchmark = "^3.2.3"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
safety = "^1.10.1"
#sphinx-autodoc-typehints = "^1.11.1"
#sphinx-autorun = "^1.1.1"
#sphinx-rtd-theme = "^1.0.0"
#sphinxcontrib-napoleon = "^0.7"
xdoctest = "^0.15.0"
#sphinx-autobuild = "^2021.3.14"
#rstcheck = "^3.3.1"
isort = "^5.7.0"
#yappi = "^1.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["iww_gvr", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["iww_gvr"]

[tool.coverage.report]
show_missing = true

[tool.isort]
atomic = true
ensure_newline_before_comments = true
known_first_party = "iww_gvr"
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "FIRSTPARTY"
use_parentheses = true
multi_line_output = 3
line_length = 88
include_trailing_comma = true
lines_between_types = 1
skip = [ "setup-generated.py" ]
skip_glob = [ "*-example.py" ]


# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
target-version = ['py38']
include = '''
(
    \.pyi?$
)
'''
exclude = '''
(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.nox
  | \.venv
  | _build
  | build
  | build_configs
  | dist
  | 3rd-party
  | data
  | htmlcov
  | mckit\.egg-info
  | _tab.py$
  | notebooks
  | tutorial
  | wrk
)
'''
